force-app/main/default/objects/DIR_Case__c/fields/Cure_Action__c.field-meta.xml
<CustomField>
    <fullName>Cure_Action__c</fullName>
    <label>Cure Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Cure Dispute</fullName>
            </value>
            <value>
                <fullName>Conference Scheduled</fullName>
            </value>
            <value>
                <fullName>Hearing Requested</fullName>
            </value>
            <value>
                <fullName>Hearing Scheduled</fullName>
            </value>
            <value>
                <fullName>Cure Complete</fullName>
            </value>
            <value>
                <fullName>Cure Partially Complete</fullName>
            </value>
            <value>
                <fullName>Cure Not Complete</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>