force-app/main/default/objects/DIR_Case__c/fields/Cure_Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Cure_Case_Name__c</fullName>
    <label>Cure Appeal Case Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>