force-app/main/default/objects/DIR_Case__c/fields/Cure_Disposition_Other__c.field-meta.xml
<CustomField>
    <fullName>Cure_Disposition_Other__c</fullName>
    <label>Cure Disposition Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>