force-app/main/default/objects/DIR_Case__c/fields/Cure_Dispute_Review_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Cure_Dispute_Review_Deadline__c</fullName>
    <formula>Cure_Dispute_Submission_Date__c +17</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cure Dispute Review Deadline</label>
    <type>Date</type>
</CustomField>