force-app/main/default/objects/DIR_Case__c/fields/Cure_Employer_Response_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Cure_Employer_Response_Submission_Date__c</fullName>
    <description>Date Employer Response was submitted online.</description>
    <inlineHelpText>Date Employer Response was submitted online.</inlineHelpText>
    <label>Employer Response Submission Date</label>
    <type>Date</type>
</CustomField>