force-app/main/default/objects/DIR_Case__c/fields/Cure_Response_Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Cure_Response_Timeliness__c</fullName>
    <formula>IF ( ISBLANK ( Cure_Employer_Response_Submission_Date__c ) , NULL ,
IF (Cure_Employer_Response_Submission_Date__c  &gt; PAGA_Cure_Response_Deadline_Date__c, "Not Timely", "Timely") )</formula>
    <label>Cure Response Timeliness</label>
    <type>Text</type>
</CustomField>