force-app/main/default/objects/DIR_Case__c/fields/Date_Case_Received_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Received_Formula__c</fullName>
    <description>To represent field 'Date Case Received' as non editable, per SCR-829</description>
    <formula>Date_Case_Received__c</formula>
    <label>Date Case Received</label>
    <type>Date</type>
</CustomField>