force-app/main/default/objects/DIR_Case__c/fields/Date_Decision_Document_Generated__c.field-meta.xml
<CustomField>
    <fullName>Date_Decision_Document_Generated__c</fullName>
    <label>Date Decision Document Generated</label>
    <type>Date</type>
</CustomField>