force-app/main/default/objects/DIR_Case__c/fields/Date_Documents_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Date_Documents_Mailed__c</fullName>
    <description>Updated by Meeting object flow, for ODA reports</description>
    <label>Date Documents Mailed</label>
    <type>Date</type>
</CustomField>