force-app/main/default/objects/DIR_Case__c/fields/Date_IC_alleged_pre_hearing__c.field-meta.xml
<CustomField>
    <fullName>Date_IC_alleged_pre_hearing__c</fullName>
    <description>Date IC alleged pre-hearing</description>
    <label>Date IC issue identified(pre-hearing)</label>
    <type>Date</type>
</CustomField>