force-app/main/default/objects/DIR_Case__c/fields/Date_of_Docket__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Docket__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date of Docket</label>
    <type>Date</type>
</CustomField>