force-app/main/default/objects/DIR_Case__c/fields/Date_Referral_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Referral_Received__c</fullName>
    <inlineHelpText>Enter the date the case referral was received from the outside agency</inlineHelpText>
    <label>Date Referral Received</label>
    <type>Date</type>
</CustomField>