force-app/main/default/objects/DIR_Case__c/fields/Days_Elapsed_in_Pending_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_Elapsed_in_Pending_Status__c</fullName>
    <formula>Today() - Date_of_BOFE_Case_in_Pending_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Elapsed in Pending Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>