force-app/main/default/objects/DIR_Case__c/fields/Days_Since_Hearing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Hearing_Completed__c</fullName>
    <description>For ODA progress reports</description>
    <formula>TODAY() - Hearing_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Hearing Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>