force-app/main/default/objects/DIR_Case__c/fields/Days_Since_ODA_Generated__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_ODA_Generated__c</fullName>
    <description>For ODA progress reports</description>
    <formula>TODAY() - Date_Decision_Document_Generated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since ODA Generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>