force-app/main/default/objects/DIR_Case__c/fields/Days_Stayed__c.field-meta.xml
<CustomField>
    <fullName>Days_Stayed__c</fullName>
    <label>Days Stayed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>