force-app/main/default/objects/DIR_Case__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <inlineHelpText>This is the date that the BOFE investigation must be complete.</inlineHelpText>
    <label>PAGA Deadline</label>
    <type>Date</type>
</CustomField>