force-app/main/default/objects/DIR_Case__c/fields/Deposited_Funds__c.field-meta.xml
<CustomField>
    <fullName>Deposited_Funds__c</fullName>
    <description>Populated by Case Payment Flow, after "Query All CPs Under A Case." Totals up all the eligible Case Payments for this Case for which funds were deposited into DLSE Office Accounts.
Also indirectly populated by CashNightlyRollup scheduled Apex class as that triggers the CP Flow.</description>
    <inlineHelpText>Total of deposited Case Payments on this Case.</inlineHelpText>
    <label>Deposited Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>