force-app/main/default/objects/DIR_Case__c/fields/Deputy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deputy_Notes__c</fullName>
    <description>Read only notes that Deputy can make on a case. Field is read only and sums the Input Notes</description>
    <inlineHelpText>Read only notes that Deputy can make on a case. Field is read only and sums the Input Notes</inlineHelpText>
    <label>Deputy Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>