force-app/main/default/objects/DIR_Case__c/fields/Determination_Date__c.field-meta.xml
<CustomField>
    <fullName>Determination_Date__c</fullName>
    <description>This is the 30 day determination required by Labor Code section 98(a)</description>
    <inlineHelpText>This is the 30 day determination required by Labor Code section 98(a)</inlineHelpText>
    <label>Date of 30 day Determination</label>
    <type>Date</type>
</CustomField>