force-app/main/default/objects/DIR_Case__c/fields/Determination_Made__c.field-meta.xml
<CustomField>
    <fullName>Determination_Made__c</fullName>
    <description>Answer yes or no as to whether the determination was made</description>
    <inlineHelpText>Answer yes or no as to whether the determination was made</inlineHelpText>
    <label>Was the 30 day Determination made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>