force-app/main/default/objects/DIR_Case__c/fields/Determination_Served_Date__c.field-meta.xml
<CustomField>
    <fullName>Determination_Served_Date__c</fullName>
    <label>Determination Served Date</label>
    <type>Date</type>
</CustomField>