force-app/main/default/objects/DIR_Case__c/fields/Determination_Served_Date_plus_45_days__c.field-meta.xml
<CustomField>
    <fullName>Determination_Served_Date_plus_45_days__c</fullName>
    <formula>Determination_Served_Date__c + 45</formula>
    <label>Determination Served Date plus 45 days</label>
    <type>Date</type>
</CustomField>