force-app/main/default/objects/DIR_Case__c/fields/Determination_Summary__c.field-meta.xml
<CustomField>
    <fullName>Determination_Summary__c</fullName>
    <inlineHelpText>Required for Determination Approval process.</inlineHelpText>
    <label>Determination Summary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re-instate</fullName>
            </value>
            <value>
                <fullName>Lost wages monitary amts</fullName>
            </value>
            <value>
                <fullName>Front pay monitary amts</fullName>
            </value>
            <value>
                <fullName>Posting a notice</fullName>
            </value>
            <value>
                <fullName>Neutral job reference</fullName>
            </value>
            <value>
                <fullName>LTR of Recommendation.</fullName>
            </value>
            <value>
                <fullName>Add’l staff training</fullName>
            </value>
            <value>
                <fullName>Distribution of written materials</fullName>
            </value>
            <value>
                <fullName>RCI video</fullName>
            </value>
            <value>
                <fullName>Conf. terms ND</fullName>
            </value>
            <value>
                <fullName>Change in nature of termination</fullName>
            </value>
            <value>
                <fullName>Reimbursement of lost benefits</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Dismissal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>