force-app/main/default/objects/DIR_Case__c/fields/Determination_Summary_Comments__c.field-meta.xml
<CustomField>
    <fullName>Determination_Summary_Comments__c</fullName>
    <label>Determination Summary Comments</label>
    <type>TextArea</type>
</CustomField>