force-app/main/default/objects/DIR_Case__c/fields/Determination_Summary_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Determination_Summary_Other_Text__c</fullName>
    <label>Determination Summary Other Text</label>
    <type>TextArea</type>
</CustomField>