force-app/main/default/objects/DIR_Case__c/fields/Determination_Type__c.field-meta.xml
<CustomField>
    <fullName>Determination_Type__c</fullName>
    <inlineHelpText>Required for Determination Approval process.</inlineHelpText>
    <label>Determination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cause</fullName>
            </value>
            <value>
                <fullName>No Cause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>