force-app/main/default/objects/DIR_Case__c/fields/DIR_Office_Email__c.field-meta.xml
<CustomField>
    <fullName>DIR_Office_Email__c</fullName>
    <label>DIR Office Email</label>
    <type>Email</type>
</CustomField>