force-app/main/default/objects/DIR_Case__c/fields/DLSE_Program__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Program__c</fullName>
    <description>Selection list of DLSE Programs</description>
    <label>DLSE Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOFE</fullName>
            </value>
            <value>
                <fullName>EEEC</fullName>
            </value>
            <value>
                <fullName>EETF</fullName>
                <label>JESF</label>
            </value>
            <value>
                <fullName>FLC</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>LETF</fullName>
            </value>
            <value>
                <fullName>PAGA</fullName>
            </value>
            <value>
                <fullName>PASS THRU</fullName>
            </value>
            <value>
                <fullName>PW</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>JANITORIAL</fullName>
            </value>
            <value>
                <fullName>TALENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>