force-app/main/default/objects/DIR_Case__c/fields/Docket_to_First_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Docket_to_First_Attempt__c</fullName>
    <description>Duration from date CM is docketed to Inactive Tracking's first attempt reach-out to claim to complete intake process. It is updated by flow.</description>
    <label>Docket to First Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>