force-app/main/default/objects/DIR_Case__c/fields/Docketed_Date__c.field-meta.xml
<CustomField>
    <fullName>Docketed_Date__c</fullName>
    <description>Manual data entry</description>
    <inlineHelpText>The date complaint is accepted for investigation</inlineHelpText>
    <label>Docketed Date</label>
    <type>Date</type>
</CustomField>