force-app/main/default/objects/DIR_Case__c/fields/Docketing_Staff__c.field-meta.xml
<CustomField>
    <fullName>Docketing_Staff__c</fullName>
    <description>User name of staff that submitted the initial claim.</description>
    <label>Docketing Staff</label>
    <type>TextArea</type>
</CustomField>