force-app/main/default/objects/DIR_Case__c/fields/Domestic_Violence_Assault_Stalking__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Violence_Assault_Stalking__c</fullName>
    <label>Domestic Violence, Assault, Stalking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>