force-app/main/default/objects/DIR_Case__c/fields/e_Sign_Documents__c.field-meta.xml
<CustomField>
    <fullName>e_Sign_Documents__c</fullName>
    <description>This field will be used to store the selected Documents Name for Electronic Signature via AssureSign.</description>
    <label>e-Sign Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SETTLEMENT- WCA 026A</fullName>
            </value>
            <value>
                <fullName>RELEASE- WCA 023</fullName>
            </value>
            <value>
                <fullName>DIRCase- WCA 055</fullName>
            </value>
            <value>
                <fullName>DIRCase- 633 055</fullName>
            </value>
            <value>
                <fullName>SETTLEMENT- WCA 026C-1</fullName>
            </value>
            <value>
                <fullName>SETTLEMENT- WCA 026B-1</fullName>
            </value>
            <value>
                <fullName>SETTLEMENT- WCA 026A-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>