force-app/main/default/objects/DIR_Case__c/fields/Employee_Desired_Remedy__c.field-meta.xml
<CustomField>
    <fullName>Employee_Desired_Remedy__c</fullName>
    <label>Employee Desired Remedy</label>
    <type>TextArea</type>
</CustomField>