force-app/main/default/objects/DIR_Case__c/fields/Employee_full_name_in_text__c.field-meta.xml
<CustomField>
    <fullName>Employee_full_name_in_text__c</fullName>
    <inlineHelpText>Type your full name.</inlineHelpText>
    <label>Employee full name in text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>