force-app/main/default/objects/DIR_Case__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Legal Entity. If there is a DBA, this can be added on the Employer/Account page.</description>
    <inlineHelpText>This is the Legal Entity. If there is a DBA, this can be added on the Employer/Account page.</inlineHelpText>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DIR_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>