force-app/main/default/objects/DIR_Case__c/fields/Employer_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Employer_Cell_Phone__c</fullName>
    <description>Used in the inspection form for BOFE. Do not delete the field without deleting the corresponding inspection question.</description>
    <formula>Employer__r.Cell_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cell Phone</label>
    <type>Text</type>
</CustomField>