force-app/main/default/objects/DIR_Case__c/fields/Employer_Coverage_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Employer_Coverage_Period_Start_Date__c</fullName>
    <formula>Employer__r.WCI_Inception_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Period Start Date</label>
    <type>Date</type>
</CustomField>