force-app/main/default/objects/DIR_Case__c/fields/Employer_Cure_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Employer_Cure_Submission_Date__c</fullName>
    <label>Employer Cure Submission Date</label>
    <type>Date</type>
</CustomField>