force-app/main/default/objects/DIR_Case__c/fields/Employer_Filer__c.field-meta.xml
<CustomField>
    <fullName>Employer_Filer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer Filer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Management (Employer Filer)</relationshipLabel>
    <relationshipName>Case_Management3</relationshipName>
    <type>Lookup</type>
</CustomField>