force-app/main/default/objects/DIR_Case__c/fields/Employer_Filer_Firm__c.field-meta.xml
<CustomField>
    <fullName>Employer_Filer_Firm__c</fullName>
    <label>Employer Filer Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>