force-app/main/default/objects/DIR_Case__c/fields/Employer_IFP_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Employer_IFP_Claimed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employer IFP Claimed</label>
    <type>Checkbox</type>
</CustomField>