force-app/main/default/objects/DIR_Case__c/fields/Employer_Industry__c.field-meta.xml
<CustomField>
    <fullName>Employer_Industry__c</fullName>
    <formula>IF (NOT(ISBLANK(TEXT( Employer__r.Low_wage_Industry_Selection__c ))), TEXT( Employer__r.Low_wage_Industry_Selection__c ), "Not Specified")</formula>
    <label>Employer Industry</label>
    <type>Text</type>
</CustomField>