force-app/main/default/objects/DIR_Case__c/fields/Employer_Knowledge_Date__c.field-meta.xml
<CustomField>
    <fullName>Employer_Knowledge_Date__c</fullName>
    <label>Employer Knowledge Date</label>
    <type>Date</type>
</CustomField>