force-app/main/default/objects/DIR_Case__c/fields/Employer_Main_Classification__c.field-meta.xml
<CustomField>
    <fullName>Employer_Main_Classification__c</fullName>
    <description>This formula field is used to display the field value from the Parent Account/Employer record. It is also being used to prepopulate to the Inspection Question.</description>
    <formula>Employer__r.Main_Workers_Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Worker's Classification</label>
    <type>Text</type>
</CustomField>