force-app/main/default/objects/DIR_Case__c/fields/Employer_Name_in_Text__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name_in_Text__c</fullName>
    <description>Hidden field for Form Assembly Employer Name lookups</description>
    <inlineHelpText>Do not enter a name in this box if it is blank. Later if you need to make a change to the Case Name, then edit the name in this box. Note: Editing the name in this box does not change the Account Name.</inlineHelpText>
    <label>Employer Name in Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>