force-app/main/default/objects/DIR_Case__c/fields/Employer_Pay_Day__c.field-meta.xml
<CustomField>
    <fullName>Employer_Pay_Day__c</fullName>
    <description>This field is being used to display the field value of the Parent Account/Employer record. This is also being used to prepopulate on the Inspection Question.</description>
    <formula>Employer__r.Pay_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Day</label>
    <type>Text</type>
</CustomField>