force-app/main/default/objects/DIR_Case__c/fields/Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Employer_Phone__c</fullName>
    <description>Displayed on the inspection form for BOFE. Do not delete field without deleting the corresponding inspection question</description>
    <formula>Employer__r.Phone</formula>
    <inlineHelpText>Phone number from the Employer record</inlineHelpText>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>