force-app/main/default/objects/DIR_Case__c/fields/Employer_Reason_for_Adverse_Action__c.field-meta.xml
<CustomField>
    <fullName>Employer_Reason_for_Adverse_Action__c</fullName>
    <label>What CP believes was PA</label>
    <type>TextArea</type>
</CustomField>